--- a/package.json
+++ b/package.json
@@ -8,17 +8,39 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-carousel": "^1.0.6",
+    "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.0",
+    "hooper": "^0.3.4",
+    "konva": "^7.2.2",
+    "mqtt": "^4.2.6",
+    "paho-mqtt": "^1.1.0",
+    "router": "^1.3.5",
+    "vue": "^2.6.12",
+    "vue-carousel": "^0.18.0",
+    "vue-cookies": "^1.7.4",
+    "vue-konva": "^2.1.6",
+    "vue-navigation-bar": "^4.1.0",
+    "vue-round-slider": "^1.0.1",
+    "vue-router": "^3.4.9",
+    "vue-slide-bar": "^1.2.0",
+    "vue-tree-nav": "0.0.16",
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@types/paho-mqtt": "^1.0.4",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
+    "vue-concise-slider": "^3.4.4",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
